# watcher

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: watchers.yaml
scratchpad/: function.py
scripts/: watcher.service.tmpl
watcher/: bot.py  cli.py  config.py  engine.py  main.py  notifier.py  picker.py  watchers_config.py
watcher/data/: watcher.service.tmpl
watcher/fetchers/: browser.py
