[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watcher"
version = "0.1.0"
description = "Personal web-change monitoring service with Telegram notifications"
requires-python = ">=3.11"
dependencies = [
    # Telegram bot
    "aiogram>=3.0",

    # HTTP fetching
    "requests>=2.32",

    # RSS parsing
    "feedparser>=6.0",

    # Headless browser
    "playwright>=1.44",
    "playwright-stealth>=1.0",

    # HTML parsing / selectors
    "beautifulsoup4>=4.12",
    "lxml>=5.0",

    # Config / env
    "python-dotenv>=1.0",
    "pyyaml>=6.0",

    # CLI output
    "rich>=13.0",

    # PDF → DOCX fallback (used when LibreOffice is not installed)
    "pdf2docx>=0.5",
]

[project.scripts]
watcher = "watcher.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["watcher*"]

[tool.setuptools.package-data]
"watcher.data" = ["*.tmpl"]
